<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Feedsta</string>
    <string name="title_activity_main">Feedsta</string>
  <string name="toolbar_title_bookmarks">Collections</string>
  <string name="toolbar_title_feed">Feed</string>
  <string name="toolbar_title_following">Followed Accounts</string>
  <string name="toolbar_title_about">About</string>
  <string name="toolbar_title_post">Post</string>
  <string name="toolbar_title_settings">Settings</string>
  <string name="something_went_wrong_more_info">Something has gone wrong.\n\nPossible reasons:\n- Instagram blocked you temporarily (this can happen if you made too many requests to Instagram). As a result none or only a few posts can be updated or displayed and profiles cannot be shown\n- you tried to access a post or an account which is not available anymore\n- you tried to access a restricted profile\n- the application has lost the internet connection\n\nPlease try again later or change the network (e.g. switch to mobile data or wifi).</string>
  <string name="no_internet_connection">No internet connection.</string>
  <string name="rate_limited">Looks like you\'ve been searching too much on Instagram and now Instagram won\'t answer.\nPlease try again later.</string>
  <string name="updating_account_urls_failed">Updating the accounts failed.\nPlease try again later.</string>
  <string name="updating_bookmarked_post_urls_failed">Updating the bookmarked posts failed.\nPlease try again later.</string>
  <string name="post_not_available_anymore">This post might not be available anymore. Do you want to go back?</string>
  <string name="not_all_accounts_could_be_queried">Not all accounts could be queried.</string>
  <string name="not_all_accounts_could_be_queried_more_info">Not all accounts could be queried.\n\nPossible reasons:\n- Instagram blocked you temporarily (this can happen if you made too many requests to Instagram). As a result none or only a few posts can be updated or displayed and profiles cannot be shown\n- you tried to access a post or an account which is not available anymore\n- you tried to access a restricted profile\n- the application has lost the internet connection\n\nPlease try again later or change the network (e.g. switch to mobile data or wifi).</string>
  <string name="no_account_could_be_queried">No account could be queried.</string>
  <string name="no_account_could_be_queried_more_info">No account could be queried.\n\nPossible reasons:\n- Instagram blocked you temporarily (this can happen if you made too many requests to Instagram). As a result none or only a few posts can be updated or displayed and profiles cannot be shown\n- you tried to access a post or an account which is not available anymore\n- you tried to access a restricted profile\n- the application has lost the internet connection\n\nPlease try again later or change the network (e.g. switch to mobile data or wifi).</string>
  <string name="button_follow">FOLLOW</string>
  <string name="button_unfollow">UNFOLLOW</string>
  <string name="full_name_private_account">%1$s (private)</string>
  <string name="no_search_results">There are no results for your search.</string>
  <string name="no_bookmarked_posts">There are no saved posts.\nSave posts to view them here.</string>
  <string name="name_hashtag_with_symbol">#%1$s</string>
  <string name="no_relationship_to_instagram">Thanks for using %1$s.\n\nThis app is designed for people who want to follow their favorite accounts without being registered with Instagram.\n\nPlease note that private profiles cannot be displayed. Instagram prohibits this.\n\nI am not affiliated with Instagram.\n\nIf you have any questions or suggestions, please write in the Play Store.\n\nIf you like the app, please leave a 5-star rating in the Play Store.</string>
  <string name="remove_account_button">RemoveAccountButton</string>
  <string name="link_copied">Copied</string>
  <string name="video_saved">Video saved</string>
  <string name="image_saved">Image saved</string>
  <string name="likes">%1$s likes</string>
  <string name="no_followed_accounts">Oops, looks like you\'re not following accounts yet. Click on the search icon to follow accounts and see their posts here.</string>
  <string name="feed_loading">Feed is loading …</string>
  <string name="image_fullscreen">fullscreen image</string>
  <string name="private_account">Looks like this account is private.\nPosts can therefore not be displayed.</string>
  <string name="hint_inputField_search">Search..</string>
  <string name="post_saved_in_bookmarks">Post saved in bookmarks</string>
  <string name="post_removed_from_bookmarks">Post removed from bookmarks</string>
  <string name="account_removed">Account removed</string>
  <string name="normalString_hashtag_fragment">\nItems</string>
  <string name="title_closing_application_dialog">Closing Application</string>
  <string name="message_closing_application_dialog">Are you sure you want to close this application?</string>
  <string name="okay">OKAY</string>
  <string name="positive_button_closing_application_dialog">YES</string>
  <string name="negative_button_closing_application_dialog">NO</string>
  <string name="posts_updated">Updating posts successful</string>
  <string name="accounts_updated">Updating accounts successful</string>
  <string name="made_with_love_from_hh_light_theme">Made with &#128420; in Hamburg, Germany</string>
  <string name="made_with_love_from_hh_dark_theme">Made with &#129293; in Hamburg, Germany</string>
  <string name="title_dialog_refresh_bookmarks">Refresh bookmarks</string>
  <string name="message_dialog_refresh_bookmarks">The thumbnails of the bookmarks and the bookmarks itself will be refreshed. This might take several minutes! Please do not close the window or shut down the app.</string>
  <string name="button_continue">CONTINUE</string>
  <string name="title_dialog_refresh_accounts">Refresh accounts</string>
  <string name="message_dialog_refresh_accounts">The thumbnails of the accounts and the accounts itself will be refreshed. This might take several minutes! Please do not close the window or shut down the app.</string>
  <string name="image_saved_failed">Failed to save image</string>
  <string name="video_saved_failed">Failed to save video</string>
  <string name="CANCEL" tools:ignore="ButtonCase">CANCEL</string>
  <string name="NO">NO</string>
  <string name="posts_updated_failed">Updated posts failed</string>
  <string name="accounts_updated_failed">Updating accounts failed</string>
  <string name="image_post_in_viewpager">Image Post in ViewPager</string>
  <string name="image_in_gridView">Image in GridView</string>
  <string name="button_loadMoreComments">Button LoadMoreComments</string>
  <string name="single_image_post">Single Image Post</string>
  <string name="button_bookmark">Button Bookmark</string>
  <string name="button_save_image_or_video">Button Save Image Or Video</string>
  <string name="button_copy_link">Button Copy Link</string>
  <string name="navigation_feed">Feed</string>
  <string name="navigation_search">Search</string>
  <string name="navigation_collections">Collections</string>
  <string name="verified_profile_image">Verified Profile Image</string>
  <string name="verified_account">Verified account badge</string>
  <string name="menu_settings">Settings</string>
  <string name="title_feed_list_columns">Number of columns</string>
  <string name="key_feed_list_columns">key_feed_list_columns</string>
  <string name="summary_feed_list_columns">Set the number of columns of posts of the feed</string>
  <string name="dark_mode">darkMode</string>
  <string name="title_enable_dark_mode">Enable dark mode</string>
  <string name="summary_dark_mode">If system is in dark mode, this has no effect</string>
  <string name="General">General</string>
  <string name="Profile">Profile</string>
  <string name="Accounts">Accounts</string>
  <string name="title_accounts_list_columns">Number of columns</string>
  <string name="key_accounts_list_columns">key_accounts_list_columns</string>
  <string name="summary_accounts_list_columns">Set the number of columns of posts when viewing an account</string>
  <string name="title_download_multiple_posts">Download Multiple Posts</string>
  <string name="permission_denied">Permission is needed for using app</string>
  <string name="image_post_fullscreen">Image of Post displayed fullscreen</string>
  <string name="title_enable_advertising_string_clipboard">Add promotion text to clipboard</string>
  <string name="advertising_string_clipboard">advertising_string_clipboard</string>
  <string name="summary_advertising_string_clipboard">Adds an advertising text to the copied text to help spread Feedsta</string>
  <string name="Videos">Videos</string>
  <string name="title_enable_video_controls">Enable video controls</string>
  <string name="summary_enable_video_controls">Enables video controls such as play, pause, fast forward or back</string>
  <string name="videoControls">videoControls</string>
  <string name="Migrating">Migrating</string>
  <string name="title_remove_multiple_bookmarks">Remove</string>
  <string name="contextual_menu_bookmarks_text">items selected to remove</string>
  <string name="remove_bookmarks_confirm_dialog_title">Remove Bookmarks</string>
  <string name="remove_bookmarks_confirm_dialog_message">Do you really want to remove the selected bookmarks? The bookmarks will be deleted. This operation cannot be undone.</string>
  <string name="selected_bookmarks_removed_success">All selected bookmarks removed</string>
  <string name="selected_bookmarks_removed_fail">Removing selected posts failed</string>
  <string name="contextual_menu_profile_download_text">items selected for download</string>
  <string name="remove_failed_bookmarks_confirm_dialog_message">Do you really want to remove the failed posts from your bookmarks? This operation cannot be undone.</string>
  <string name="progress_dialog_title_download_selected_posts">Downloading selected posts</string>
  <string name="progress_dialog_message_download_selected_posts">This might take a while. Please wait until download is finished.</string>
  <string name="menu_followed_accounts">Followed Accounts</string>
  <string name="menu_about">About</string>
  <string name="menu_remove_account">Remove</string>
  <string name="menu_statistics_dialog">Statistics</string>
  <string name="menu_exit">Exit</string>
  <string name="bottom_sheet_title_new_collection">Save bookmark to new collection</string>
  <string name="bottom_sheet_hint_editText">Name of collection..</string>
  <string name="Posts">Posts</string>
  <string name="menu_change_category_bookmarks_title">Move to</string>
  <string name="menu_download_bookmarks_title">Download</string>
  <string name="menu_select_all_bookmarks">Select all</string>
  <string name="menu_reset_category_bookmarks">Remove from this collection</string>
  <string name="title_menu_remove_collection_bookmarks">Remove</string>
  <string name="menu_rename_collection_bookmarks_title">Rename</string>
  <string name="export_files">export_files</string>
  <string name="summary_export_files">Export followed accounts and bookmarks</string>
  <string name="title_export_files">Export data into folder</string>
  <string name="import_files">import_files</string>
  <string name="summary_import_files">Import followed accounts and bookmarks</string>
  <string name="title_import_files">Import data from folder</string>
  <string name="menu_remove_only_collection_title">Remove only collection</string>
  <string name="volume_up_imageview">Volume Up ImageView</string>
  <string name="rewind_button">Rewind Button</string>
  <string name="repeat_toggle_button">Repeat Toggle Button</string>
  <string name="play_button">Play Button</string>
  <string name="pause_button">Pause Button</string>
  <string name="fast_forward_button">Fast Forward Button</string>
  <string name="fullscreen_icon">Fullscreen Icon</string>
</resources>