<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_action_followed_accounts"
        android:orderInCategory="100"
        android:title="@string/menu_followed_accounts"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="200"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_statistics_dialog"
        android:orderInCategory="300"
        android:title="@string/menu_statistics_dialog"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_info"
        android:orderInCategory="400"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="500"
        android:title="@string/menu_exit"
        app:showAsAction="never" />
</menu>
