<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_remove_multiple_bookmarks"
        android:orderInCategory="100"
        android:title="@string/title_remove_multiple_bookmarks"
        android:icon="?attr/icon_action_bar_remove"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_change_category_bookmarks"
        android:icon="?attr/icon_action_bar_move_to"
        android:orderInCategory="200"
        android:title="@string/menu_change_category_bookmarks_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_download_bookmarks"
        android:icon="?attr/icon_action_bar_download"
        android:orderInCategory="300"
        android:title="@string/menu_download_bookmarks_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_reset_category_bookmarks"
        android:icon="?attr/icon_action_bar_reset_category_bookmarks"
        android:orderInCategory="400"
        android:title="@string/menu_reset_category_bookmarks"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_select_all_bookmarks"
        android:icon="?attr/icon_action_bar_selectAll_bookmarks"
        android:orderInCategory="500"
        android:title="@string/menu_select_all_bookmarks"
        app:showAsAction="never" />
</menu>